--- a/PopCast.xcodeproj/xcshareddata/xcschemes/PopCastOsxFramework.xcscheme
+++ b/PopCast.xcodeproj/xcshareddata/xcschemes/PopCastOsxFramework.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "BF4090E51B5EDA7100643329"
-               BuildableName = "PopCastAndroid.framework"
+               BuildableName = "PopCastOsxFramework.framework"
                BlueprintName = "PopCastOsxFramework"
                ReferencedContainer = "container:PopCast.xcodeproj">
             </BuildableReference>
@@ -33,7 +33,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "BF4090E51B5EDA7100643329"
-            BuildableName = "PopCastAndroid.framework"
+            BuildableName = "PopCastOsxFramework.framework"
             BlueprintName = "PopCastOsxFramework"
             ReferencedContainer = "container:PopCast.xcodeproj">
          </BuildableReference>
@@ -55,7 +55,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "BF4090E51B5EDA7100643329"
-            BuildableName = "PopCastAndroid.framework"
+            BuildableName = "PopCastOsxFramework.framework"
             BlueprintName = "PopCastOsxFramework"
             ReferencedContainer = "container:PopCast.xcodeproj">
          </BuildableReference>
@@ -73,7 +73,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "BF4090E51B5EDA7100643329"
-            BuildableName = "PopCastAndroid.framework"
+            BuildableName = "PopCastOsxFramework.framework"
             BlueprintName = "PopCastOsxFramework"
             ReferencedContainer = "container:PopCast.xcodeproj">
          </BuildableReference>
