AvfCompresor namespaces renamed to Avf. AvfCaster now a TMediaEncoder. TFileCaster wraps this output to write to files.

--- a/PopCast.xcodeproj/xcshareddata/xcschemes/PopCastOsx.xcscheme
+++ b/PopCast.xcodeproj/xcshareddata/xcschemes/PopCastOsx.xcscheme
@@ -53,7 +53,7 @@
       allowLocationSimulation = "YES">
       <PathRunnable
          runnableDebuggingMode = "0"
-         FilePath = "/Applications/Unity 5.1.2f1/Unity.app">
+         FilePath = "/Applications/Unity 5.1.3p3/Unity.app">
       </PathRunnable>
       <MacroExpansion>
          <BuildableReference
