--- a/PopCast.xcodeproj/xcshareddata/xcschemes/Android_Master.xcscheme
+++ b/PopCast.xcodeproj/xcshareddata/xcschemes/Android_Master.xcscheme
@@ -5,15 +5,6 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
-      <PostActions>
-         <ExecutionAction
-            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
-            <ActionContent
-               title = "Run Script"
-               scriptText = "">
-            </ActionContent>
-         </ExecutionAction>
-      </PostActions>
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
@@ -23,16 +14,16 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "BF41F9731B4BD0700015614A"
-               BuildableName = "PopCastOsx.bundle"
-               BlueprintName = "PopCastOsx"
+               BlueprintIdentifier = "BF06DEFD1B2ACD3B006F241F"
+               BuildableName = "PopCastAndroid"
+               BlueprintName = "PopCastAndroid"
                ReferencedContainer = "container:PopCast.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Master"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
@@ -42,7 +33,7 @@
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Master"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -51,17 +42,12 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <PathRunnable
-         runnableDebuggingMode = "0"
-         BundleIdentifier = "com.unity3d.UnityEditor5.x"
-         FilePath = "/Applications/Unity 5.2.2p3/Unity.app">
-      </PathRunnable>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BF41F9731B4BD0700015614A"
-            BuildableName = "PopCastOsx.bundle"
-            BlueprintName = "PopCastOsx"
+            BlueprintIdentifier = "BF06DEFD1B2ACD3B006F241F"
+            BuildableName = "PopCastAndroid"
+            BlueprintName = "PopCastAndroid"
             ReferencedContainer = "container:PopCast.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -69,7 +55,7 @@
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Master"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
@@ -77,18 +63,18 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BF41F9731B4BD0700015614A"
-            BuildableName = "PopCastOsx.bundle"
-            BlueprintName = "PopCastOsx"
+            BlueprintIdentifier = "BF06DEFD1B2ACD3B006F241F"
+            BuildableName = "PopCastAndroid"
+            BlueprintName = "PopCastAndroid"
             ReferencedContainer = "container:PopCast.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
-      buildConfiguration = "Debug">
+      buildConfiguration = "Master">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Master"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
