--- a/PopCast.xcodeproj/xcshareddata/xcschemes/Android_Watermarked.xcscheme
+++ b/PopCast.xcodeproj/xcshareddata/xcschemes/Android_Watermarked.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0700"
+   LastUpgradeVersion = "0720"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,35 +14,26 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "BF4090E51B5EDA7100643329"
-               BuildableName = "PopCastFramework.framework"
-               BlueprintName = "PopCastFramework"
+               BlueprintIdentifier = "BF06DEFD1B2ACD3B006F241F"
+               BuildableName = "PopCastAndroid"
+               BlueprintName = "PopCastAndroid"
                ReferencedContainer = "container:PopCast.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Master"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BF4090E51B5EDA7100643329"
-            BuildableName = "PopCastFramework.framework"
-            BlueprintName = "PopCastFramework"
-            ReferencedContainer = "container:PopCast.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Watermarked"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -54,9 +45,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BF4090E51B5EDA7100643329"
-            BuildableName = "PopCastFramework.framework"
-            BlueprintName = "PopCastFramework"
+            BlueprintIdentifier = "BF06DEFD1B2ACD3B006F241F"
+            BuildableName = "PopCastAndroid"
+            BlueprintName = "PopCastAndroid"
             ReferencedContainer = "container:PopCast.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -64,7 +55,7 @@
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Master"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
@@ -72,18 +63,18 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BF4090E51B5EDA7100643329"
-            BuildableName = "PopCastFramework.framework"
-            BlueprintName = "PopCastFramework"
+            BlueprintIdentifier = "BF06DEFD1B2ACD3B006F241F"
+            BuildableName = "PopCastAndroid"
+            BlueprintName = "PopCastAndroid"
             ReferencedContainer = "container:PopCast.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
-      buildConfiguration = "Debug">
+      buildConfiguration = "Master">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Master"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
