--- a/PopCast.xcodeproj/xcshareddata/xcschemes/Osx_Watermarked.xcscheme
+++ b/PopCast.xcodeproj/xcshareddata/xcschemes/Osx_Watermarked.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0700"
+   LastUpgradeVersion = "0720"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,26 +14,49 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "BF06DEFD1B2ACD3B006F241F"
-               BuildableName = "PopCastAndroid"
-               BlueprintName = "PopCastAndroid"
+               BlueprintIdentifier = "BF41F9731B4BD0700015614A"
+               BuildableName = "PopCastOsx.bundle"
+               BlueprintName = "PopCastOsx"
+               ReferencedContainer = "container:PopCast.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "NO"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "BF4090E51B5EDA7100643329"
+               BuildableName = "PopCastFramework.framework"
+               BlueprintName = "PopCastFramework"
                ReferencedContainer = "container:PopCast.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Master"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "BF41F9731B4BD0700015614A"
+            BuildableName = "PopCastOsx.bundle"
+            BlueprintName = "PopCastOsx"
+            ReferencedContainer = "container:PopCast.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Watermarked"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
@@ -45,9 +68,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BF06DEFD1B2ACD3B006F241F"
-            BuildableName = "PopCastAndroid"
-            BlueprintName = "PopCastAndroid"
+            BlueprintIdentifier = "BF41F9731B4BD0700015614A"
+            BuildableName = "PopCastOsx.bundle"
+            BlueprintName = "PopCastOsx"
             ReferencedContainer = "container:PopCast.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -55,7 +78,7 @@
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Master"
       shouldUseLaunchSchemeArgsEnv = "YES"
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
@@ -63,18 +86,18 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "BF06DEFD1B2ACD3B006F241F"
-            BuildableName = "PopCastAndroid"
-            BlueprintName = "PopCastAndroid"
+            BlueprintIdentifier = "BF41F9731B4BD0700015614A"
+            BuildableName = "PopCastOsx.bundle"
+            BlueprintName = "PopCastOsx"
             ReferencedContainer = "container:PopCast.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
-      buildConfiguration = "Debug">
+      buildConfiguration = "Master">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Master"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
 </Scheme>
