--- a/PopCast.visualstudio/PopCast.vcxproj.filters
+++ b/PopCast.visualstudio/PopCast.vcxproj.filters
@@ -164,5 +164,8 @@
     <None Include="..\src\TAirplayCaster.mm">
       <Filter>src</Filter>
     </None>
+    <None Include="..\src\Editor\PopCastWindow.cs">
+      <Filter>src</Filter>
+    </None>
   </ItemGroup>
 </Project>
