--- a/PopCast.visualstudio/PopCast.vcxproj
+++ b/PopCast.visualstudio/PopCast.vcxproj
@@ -42,6 +42,33 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Watermarked|x64'">true</ExcludedFromBuild>
     </None>
+    <None Include="..\src\Blit.glsl.vert" />
+    <None Include="..\src\Blit.hlsl.vert" />
+    <None Include="..\src\Blit2D.glsl.frag" />
+    <None Include="..\src\BlitAudioGraph.glsl.frag" />
+    <None Include="..\src\BlitAudioGraph.hlsl.frag" />
+    <None Include="..\src\BlitBarGraph.glsl.frag" />
+    <None Include="..\src\BlitBarGraph.hlsl.frag" />
+    <None Include="..\src\BlitError.glsl.frag" />
+    <None Include="..\src\BlitError.hlsl.frag" />
+    <None Include="..\src\BlitFreenectDepth10mm.glsl.frag" />
+    <None Include="..\src\BlitOesExternal.glsl.frag" />
+    <None Include="..\src\BlitRectangle.glsl.frag" />
+    <None Include="..\src\BlitRgba.hlsl.frag" />
+    <None Include="..\src\BlitTest.glsl.frag" />
+    <None Include="..\src\BlitTest.hlsl.frag" />
+    <None Include="..\src\BlitWatermark.glsl.frag" />
+    <None Include="..\src\BlitWatermark.hlsl.frag" />
+    <None Include="..\src\BlitYuv.glsl.frag" />
+    <None Include="..\src\BlitYuv.hlsl.frag" />
+    <None Include="..\src\BlitYuv_8_88_Full.glsl.frag" />
+    <None Include="..\src\BlitYuv_8_88_Full.hlsl.frag" />
+    <None Include="..\src\BlitYuv_8_88_Video.glsl.frag" />
+    <None Include="..\src\BlitYuv_8_88_Video.hlsl.frag" />
+    <None Include="..\src\BlitYuv_8_8_8_Full.glsl.frag" />
+    <None Include="..\src\BlitYuv_8_8_8_Full.hlsl.frag" />
+    <None Include="..\src\BlitYuv_8_8_8_Video.glsl.frag" />
+    <None Include="..\src\BlitYuv_8_8_8_Video.hlsl.frag" />
     <None Include="..\src\BundleInfo.plist">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Watermarked|Win32'">true</ExcludedFromBuild>
@@ -55,8 +82,10 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Watermarked|x64'">true</ExcludedFromBuild>
     </None>
-    <None Include="..\src\GifDebug.frag" />
-    <None Include="..\src\GifNearest.frag" />
+    <None Include="..\src\GifDebug.hlsl.frag" />
+    <None Include="..\src\GifDebug.glsl.frag" />
+    <None Include="..\src\GifNearest.glsl.frag" />
+    <None Include="..\src\GifNearest.hlsl.frag" />
     <None Include="..\src\PopCast.cs" />
     <None Include="..\src\TAirplayCaster.mm">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
