--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ Unity/Assets/PopCast/PopCast.cs
 Unity/Assets/PopCast/PopCastCameraCapture.cs
 Unity/Assets/PopCast/PopTexturePtrCache.cs
 Unity/Assets/PopCast/Windows/x64/PopCast.dll
+Unity/Assets/PopCast/Windows/Win32/PopCast.dll
 
 
 MakePackage.log
